# atomic-atlas

./: .env.example  .gitignore  DISCLAIMER.md  LICENSE  PRD.md  README.md  SPEC.md  index.yaml  pyproject.toml  test.md
atomics/AML.T0011.002/: mcp_server.md
atomics/AML.T0051.000/: direct_chat.md
atomics/AML.T0051.001/: a2a_message.md  document_upload.md  mcp_server.md  rag_corpus.md  tool_response.md
atomics/AML.T0053/: tool_response.md
atomics/AML.T0054/: direct_chat.md
atomics/AML.T0065/: direct_chat.md
atomics/AML.T0080/: direct_chat.md
atomics/AML.T0080.000/: direct_chat.md
atomics/AML.T0083/: direct_chat.md
atomics/AML.T0084/: direct_chat.md
atomics/AML.T0086/: a2a_message.md  mcp_server.md
atomics/AML.T0093/: webhook.md
atomics/AML.T0097/: direct_chat.md
docs/: adapt.md  agent-runner.md  atlas-coverage.md  benchmarks.md  cli-reference.md  install.md  pyrit.md  quickstart.md  sample_execution.md  scoring.md  targets.md  use-cases.md
runbooks/: README.md
sample_assessment1/: results.jsonl
schema/: atomic_frontmatter.schema.json  runbook_frontmatter.schema.json
scripts/: generate_index.py
skill/: atomic-atlas.md
targets/: dvaa_legacybot.yaml  dvaa_local.yaml
tests/: conftest.py  test_engagement.py  test_env.py  test_evidence.py  test_finding.py  test_hitl.py  test_index.py  test_llm_judge_scorer.py  test_mcp_jsonrpc.py  test_parser.py  test_payload_adapter.py  test_recon.py  test_refusal_short_circuit.py  test_reporters.py  test_runbook.py  test_runbook_runner.py  test_runner.py  test_scorer_selection.py
(+144 files in other folders)
