[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomic-atlas"
version = "0.1.0"
description = "ATLAS-keyed agentic vector tests, backed by PyRIT"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "click>=8.1.0",
]

[project.scripts]
atomic-atlas = "atomic_atlas.cli:main"
atomic-atlas-mcp = "atomic_atlas.mcp_server:main"

[project.optional-dependencies]
# Required to actually run atomics via `atomic-atlas exec`.
# The base install supports list / recon / report / validate and the MCP server
# without pulling in PyRIT's heavy transitive deps (azure-ai, openai, anthropic,
# chromadb, etc).
orchestrator = [
    "pyrit>=0.5.0",
]
# Required to run the atomic-atlas MCP server (`atomic-atlas-mcp`). The CLI
# itself does not need this.
mcp-server = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/atomic_atlas"]
